# QAToolBox

./: .bandit  .dockerignore  .env.production  .gitignore  ACHIEVEMENTS_API_FIX_SUMMARY.md  ADMIN_ACCESS_GUIDE.md  ADMIN_FEATURES_COMPLETE.md  ADMIN_FEATURES_SUMMARY.md  ADMIN_SYSTEM_SUMMARY.md  AI_LINKS_IMPLEMENTATION_SUMMARY.md  AI_QUESTION_SELECTION_SUMMARY.md  ALIYUN_CENTOS_DEPLOYMENT.md  ALIYUN_DEPLOYMENT_GUIDE.md  ALIYUN_DEPLOY_FINAL.md  ALIYUN_DEPLOY_GUIDE.md  ALIYUN_DEPLOY_MANUAL.md  ANTI_PROGRAMMER_DESIRE_ENHANCEMENT_SUMMARY.md  API_REFACTORING_SUMMARY.md  API_SETUP_GUIDE.md  ASYNC_TEST_CASE_GENERATOR_IMPROVEMENTS.md  AUDIO_CONVERTER_FEATURE_SUMMARY.md  AUDIO_CONVERTER_PAGE_FINAL_SUMMARY.md  AUDIO_PLAYBACK_SOLUTION.md  AUTO_JOB_SEARCH_IFRAME_LOGIN_IMPROVEMENT.md  AUTO_JOB_SEARCH_MACHINE_SUMMARY.md  AUTO_JOB_SEARCH_QR_REMOVAL_SUMMARY.md  AUTO_TAB_GENERATOR_SUMMARY.md  AVATAR_CLICK_ENTRANCE_SUMMARY.md  AVATAR_IMAGE_PROCESSING_SUMMARY.md  AVATAR_SIZE_BALANCE_OPTIMIZATION.md  AVATAR_SIZE_FINAL_OPTIMIZATION.md  AVATAR_SIZE_FURTHER_OPTIMIZATION.md  AVATAR_SIZE_OPTIMIZATION_SUMMARY.md  BACKGROUND_TASKS_SUMMARY.md  BATCH_FILE_INPUT_FIX_SUMMARY.md  BILIBILI_CRAWLER_FIX_SUMMARY.md  BILIBILI_REAL_CRAWLER_SUMMARY.md  BOSS_QR_CODE_IMPROVEMENTS_SUMMARY.md  BOSS_SELENIUM_QR_SUMMARY.md  BOSS_ZHIPIN_API_README.md  (+921 more)
QAToolBox/: celery.py
api/: __init__.py  authentication.py  models.py  pagination.py  permissions.py  response.py  unified_auth.py
api/v1/: urls.py
config/: deploy_aliyun_offline.sh
deploy/: env.template  one_click_deploy.sh  smart_deploy.sh
docs/: API_ARCHITECTURE.md  API_ENDPOINTS.md  COMPLETE_DEVELOPMENT_SUMMARY.md  DEVELOPMENT_PLAN.md  MULTI_PLATFORM_DEVELOPMENT_SUMMARY.md  WEB_DEVELOPMENT_SUMMARY.md  tarot_reading_guide.md  theme_manager_usage.md
github_release/: README_DEPLOY.md  deploy_aliyun_one_click.sh  deploy_complete_with_all_deps.sh  deploy_quick_start.sh  git_push_to_github.sh  requirements_complete.txt  test_deployment.sh
k8s/: deployment.yaml
middleware/: cors_headers.py  performance.py
monitoring/: dashboard_views.py  error_monitor.py  health_check.py  performance_monitor.py  sentry.py  user_behavior_analyzer.py
requirements/: audio_processing.txt  base.txt  dev.txt  prod.txt  production.txt  requirements.txt
scripts/: backup.sh  deploy.sh  monitoring_dashboard.py  one_click_deploy.sh  post_deployment_verification.py  quick_start.sh  run_tests.sh  smoke_test.py  start_with_tests.sh
ssl/: cert.pem  key.pem
static/: click_test_standalone.html  responsive.css  test_websocket.html  websocket_test.html
(+661 files in other folders)
